--- a/.gitconfig
+++ b/.gitconfig
@@ -17,10 +17,16 @@
 	di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
 
 	# Pull in remote changes for the current repository
-	p = pull --rebase
+	pr = pull --rebase
+	pm = pull --rebase origin master
+
+	# Push changes
+	p = push
+	ph = push -u origin HEAD
+	pf = push --force
 
 	# Commit all changes.
-	ca = !git add -A && git commit -av
+	c = !git add -A && git commit -av
 
 	# Show verbose output about tags, branches or remotes
 	tags = tag -l
@@ -31,7 +37,15 @@
 	aliases = config --get-regexp alias
 
 	# Amend the currently staged files to the latest commit.
-	amend = commit --amend --reuse-message=HEAD
+	ca = commit --amend --reuse-message=HEAD
+
+	# Checkout
+	co = checkout
+	com = checkout master
+
+	# Reset or uncommit
+	r = reset 
+	uc = reset --soft HEAD~1
 
 	# Credit an author on the latest commit.
 	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
